# pwwwd

./: Cargo.toml  Cross.toml  LICENSE  README.md
.github/workflows/: cargo.yml  release.yml
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: cli.rs  ipc.rs  lib.rs  restore.rs  utils.rs
src/: ease.rs  main.rs  server.rs  wallpaper.rs
src/ease/: cubic_bezier.rs  static_curves.rs
src/wallpaper/: bind_group.rs  config.rs  misc.rs  off_screen.rs  render_pipeline.rs  sampler.rs  shaders.rs  texture.rs  transition_state.rs  vertex.rs
src/wallpaper/shaders/: transition.rs  wallpaper.rs  wallpaper.wgsl
src/wallpaper/shaders/transition/: wipe.rs  xfd.rs  xfd.wgsl
