[package]
name = "pwwwd"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "client",
    "common",
]

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = ["derive"] }
clap = "4.5.53"
common = { version = "0.1.0", path = "common", features = ["async"] }
image = "0.25.9"
raw-window-handle = "0.6.2"
smithay-client-toolkit = "0.20.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
wayland-backend = { version = "0.3.11", features = ["client_system"] }
wayland-client = "0.31.11"
wgpu = "27.0.1"

[features]
panic-dropping-unreleased-task-handle = []
