[package]
name = "pwwwd"
version = "0.1.0"
edition = "2024"
"rust-version" = "1.88.0"
authors = ["Navi Hex"]
description = "Phillips's wgpu-based Wayland wallpaper daemon"
repository = "https://github.com/NaviHX/pwwwd"
license = "MIT"
keywords = ["graphics", "wayland", "wallpaper"]

[profile.release]
strip = true
lto = true

[workspace]
members = [
    "client",
    "common",
]

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = ["derive"] }
clap = "4.5.53"
common = { version = "0.1.0", path = "common", features = ["async"] }
image = "0.25.9"
mint = "0.5.9"
raw-window-handle = "0.6.2"
smithay-client-toolkit = "0.20.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
wayland-backend = { version = "0.3.11", features = ["client_system"] }
wayland-client = "0.31.11"
wgpu = "27.0.1"

[features]
panic-double-toggle-busy = []
