[package]
name = "common"
version = "0.2.0"
edition = "2024"

[profile.release]
strip = true
lto = true

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
directories = "6.0.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", optional = true }

[features]
async = ["tokio/io-util"]
